# EEG-acquisition

./: README.md  signal_aquisition_node.cpp
audio_cues/: audio_cues.py  audio_cues.py~  audiofile.txt  readme.txt  sys
grasping/: CLparamfile.txt  grasping.cpp  grasping_ros.cpp  input.txt  output  output.txt
ros_catkin_ws/biosemi/: CMakeLists.txt  CMakeLists.txt~  initbiosemi.sh  labview_dll.ini~  package.xml  package.xml~  paramfile.txt  paramfile.txt~  paramfileTemplate.txt
ros_catkin_ws/biosemi/msg/: biosemiMessage.msg  biosemiMessage.msg~
ros_catkin_ws/biosemi/src/: biosemiNode.cpp  biosemiNode.cpp~  labview_dll_synctest.cpp
ros_catkin_ws/grasping/: CMakeLists.txt  labview_dll.ini  package.xml
ros_catkin_ws/grasping/src/: CLparamfile.txt  graspReceive.cpp  graspSend.cpp  grasping_ros.cpp
ros_catkin_ws/pa10_remote/: CMakeLists.txt  CMakeLists.txt~  package.xml
ros_catkin_ws/pa10_remote/msg/: PPCArmData.msg  PPCVisionData.msg  PPCVisionData.msg~
ros_catkin_ws/pa10_remote/scripts/: load_cells_node.py  load_cells_node.py~  math_utils.py  math_utils.py~  pa10Control.py~  pa10_control.py~  pa10_control_force.py  pa10_control_force.py~  pa10_control_ibvs.py  pa10_ee_tracking.py  pa10_ee_tracking.py~  pa10_kinematics.py  pa10_kinematics.py~
ros_catkin_ws/pa10_remote/src/: pa10_kinematics.cpp  pa10_kinematics.cpp~  pa10_remote_node.cpp~
