<?xml version="1.0"?>
<package>
  <name>grasping</name>
  <version>0.0.0</version>
  <description>First attempt at creating grasping package</description>
  <maintainer email="ch.kalavritinos@gmail.com">charilaos</maintainer>

  <license>BSD</license>
  <author email="ch.kalavritinos@gmail.com">Haris Kalavritinos</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>
  <!-- Other tools can request additional information be placed here -->
  </export>
</package>
